--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Base44 APP</title>
+    <title>Nutri Scan | AI-powered nutrition insights</title>
+    <meta
+      name="description"
+      content="Nutri Scan analyzes your meals, tracks macros, and keeps you aligned with personalized diet plans."
+    />
   </head>
   <body>
     <div id="root"></div>
